--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.datasource.url: ${JDBC_DATABASE_URL:}
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.maximum-pool-size=10
 
+spring.data.rest.base-path=/api
+
 spring.jpa.hibernate.ddl-auto = update
 
 logging.level.org.springframework=INFO
