--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,9 @@
-spring.datasource.url: ${JDBC_DATABASE_URL:}
+spring.datasource.url=${JDBC_DATABASE_URL:}
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.maximum-pool-size=10
 
 spring.jpa.hibernate.ddl-auto = update
 
-logging.level.org.springframework=INFO
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-logging.level.org.hibernate.type=TRACE
-
-spring.profiles.active=production
+spring.profiles.active=${SPRING_PROFILE:dev}
 
 server.port=${PORT:5000}
