--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,7 @@ spring.jpa.hibernate.ddl-auto = update
 
 spring.profiles.active=${SPRING_PROFILE:dev}
 
+spring.security.user.name=${SPRING_USERNAME:dev_user}
+spring.security.user.password=${SPRING_PASSWORD:dev_password}
+
 server.port=${PORT:5000}
