Add admin user with full privileges, restrict standard user to /submissions

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,9 @@ spring.jpa.hibernate.ddl-auto = update
 
 spring.profiles.active=${SPRING_PROFILE:dev}
 
-spring.security.user.name=${SPRING_USERNAME:dev_user}
-spring.security.user.password=${SPRING_PASSWORD:dev_password}
+user.username=${USER_USERNAME:user_username}
+user.password=${USER_PASSWORD:user_password}
+admin.username=${ADMIN_USERNAME:admin_username}
+admin.password=${ADMIN_PASSWORD:admin_password}
 
 server.port=${PORT:5000}
