--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,7 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+db.export.query="also nothing"
+
 logging.level.org.springframework=INFO
 logging.level.org.hibernate.SQL=INFO
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=INFO
